--- a/cabins.html
+++ b/cabins.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cabins | Scenic Forests</title>
-  <!-- INSERT FAVICON -->
+  <!-- Favicon -->
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
   <!-- Reset, Main, & Secondary CSS -->
   <link rel="stylesheet" href="normalize.css">
   <link rel="stylesheet" href="index.css">
